[package]
name = "pwm"
version = "2.0.0"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
byteorder = "1.4"
clipboard = { version = "0.5", optional = true }
data-encoding = "2.3"
flaggy = "0.2"
git2 = { version = "0.13", default-features = false, features = [] }
lazy_static = "1.4"
log = "0.4"
qrcode-generator = { version = "4.0", optional = true }
rand = "0.8"
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2"
thiserror = "1.0"

[dependencies.bdrck]
version = "0.18"
default_features = false
features = ["cli", "configuration", "crypto", "logging", "testing"]

[dependencies.yubirs]
version = "0.8"
default_features = false
features = ["piv"]
optional = true

[features]
default = ["clipboard", "piv", "wifiqr"]
piv = ["yubirs"]
wifiqr = ["qrcode-generator"]

[lib]
name = "pwm_lib"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true

[[bin]]
name = "pwm"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false
