[package]
name = "pwm"
version = "2.0.3"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
description = "A simple password manager for Linux"
homepage = "https://git.moozy.me/pwm.git"
repository = "https://git.moozy.me/pwm.git"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
clipboard = { version = "0.5", optional = true }
data-encoding = "2.5"
git2 = { version = "0.18", default-features = false, features = [] }
once_cell = "1.19"
qrcode-generator = { version = "4.1", optional = true }
rand = "0.8"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.bdrck]
version = "0.20"
default_features = false
features = ["cli", "configuration", "crypto", "testing"]

[dependencies.yubirs]
version = "0.9"
default_features = false
features = ["piv"]
optional = true

[dev-dependencies]
flate2 = "1.0"
tar = "0.4"
tempfile = "3.10"

[features]
default = ["clipboard", "wifiqr"]
piv = ["yubirs"]
wifiqr = ["qrcode-generator"]

[lib]
name = "pwm_lib"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true

[[bin]]
name = "pwm"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false
